Added instagram account.

--- a/en/index.html
+++ b/en/index.html
@@ -79,6 +79,8 @@ A local cafe with branches in Kamifukuoka and Tsuruse, we specialise in a variet
 
 	<li><a href="//facebook.com/paulscoffeejapan" class="icon fa-facebook"><span class="label">facebook</span></a></li>
 
+	<li><a href="//instagram.com/paulscoffeejapan" class="icon fa-instagram"><span class="label">instagram</span></a></li>
+
 </ul>
 
 <h2>Tsuruse branch</h2>
