--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
 
 	<li><a href="//facebook.com/paulscoffeejapan" class="icon fa-facebook"><span class="label">facebook</span></a></li>
 
+	<li><a href="//instagram.com/paulscoffeejapan" class="icon fa-instagram"><span class="label">instagram</span></a></li>
+
 </ul>
 
 <h2>鶴瀬</h2>
